<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.com.moodie</groupId>
	<artifactId>projeto-tqs-moodie</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<maven.repo.local>C:\m2-repo</maven.repo.local>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<junit.version>5.10.2</junit.version>
		<mockito.version>5.11.0</mockito.version>
		<jacoco.version>0.8.11</jacoco.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>1.14.12</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-surefire-plugin</artifactId>
    			<version>3.2.5</version>
    			<configuration>
        			<argLine>@{argLine} -XX:+EnableDynamicAgentLoading --add-opens java.base/java.lang=ALL-UNNAMED -Dnet.bytebuddy.experimental=true</argLine>
    			</configuration>
			</plugin>

			<plugin>
    			<groupId>org.jacoco</groupId>
    			<artifactId>jacoco-maven-plugin</artifactId>
    			<version>0.8.11</version>
    			<executions>
        			<execution>
            			<id>prepare-agent</id>
            			<goals>
                			<goal>prepare-agent</goal>
            			</goals>
        			</execution>
        			<execution>
            			<id>report</id>
            			<phase>test</phase>
            			<goals>
                			<goal>report</goal>
           				</goals>
        			</execution>
    			</executions>
			</plugin>
		</plugins>
	</build>
</project>